[package]
name = "toycc"
authors = ["Bacal Mesfin <mesfinb2@vcu.edu>", ""]
version = "0.1.0"
edition = "2021"
categories = ["compilers"]

[workspace]
members = [
    "compiler/toycc_report",
    "compiler/toycc_frontend",
    "compiler/toycc_argparser"]

[dependencies]
colored = "2.1.0"
toycc_parser = {path = "compiler/toycc_frontend" }
toycc_report = {path = "compiler/toycc_report"}
toycc_argparser = {path = "compiler/toycc_argparser"}