[package]
name = "toycc_frontend"
version = "0.1.0"
edition = "2021"
authors = ["Bacal Mesfin:<mesfinb2@vcu.edu>", "Yaqub Mukhtar:<mukhtaryw@vcu.edu>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toycc_report = {path = "../toycc_report"}
colored = "2.1.0"